compiler/tests/fa/errors/extern_mod_misuse.salam
// انتظار: توصیف
// زبان: فارسی
خارجی "C":
    درون‌خطی تابع fabs(مقدار : اعشار۶۴) : اعشار۶۴
پایان

تابع اصلی:
    چاپ(fabs(0.0 - 1.0))
پایان
